# fcm-trader

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py  logging.py
app/features/data_ingestion/: models.py  repository.py  schemas.py  service.py
app/features/signal_generation/: models.py  schemas.py
docs/: architecture_v1.md  architecture_v2.md  architecture_v3.md  ctrl.md  detailed_design_v1.md  detailed_design_v2.md  prd.md  prd_v1.md  specs.md  specs_v1.md  specs_v2.md  task.md  task_v1.md  task_v2.md
scripts/: run_data_ingestion.py
tests/features/data_ingestion/: test_integration.py  test_repository.py  test_service.py
